deploy: b756cfb44f452126c441086e61cfe0f94ab942ad

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     }
     .page {
       display: grid;
-      grid-template-columns: 1fr 220px;
+      grid-template-columns: 1fr;
       gap: 0;
       min-height: 100vh;
       align-content: start;
       padding: 24px;
+      padding-right: 24px;
       box-sizing: border-box;
     }
     .viewer {
@@ -37,7 +38,7 @@
       border: 1px solid #d2d2d2;
       overflow: hidden;
       height: var(--viewer-height);
-      margin: 0 18px 18px 0;
+      margin: 0 0 18px 0;
     }
     .viewer-media {
       position: absolute;
@@ -121,7 +122,13 @@
       border-radius: 16px;
       padding: 10px;
       overflow-y: auto;
-      margin: 0 0 18px 18px;
+      display: flex;
+      align-items: flex-start;
+      gap: 0;
+      overflow-x: auto;
+      overflow-y: hidden;
+      white-space: nowrap;
+      margin: 0 0 18px 0;
     }
     .thumbs h2 {
       margin: 6px 6px 12px;
@@ -130,9 +137,14 @@
       letter-spacing: 1.2px;
       opacity: 0.7;
     }
+    #thumbList {
+      display: flex;
+      gap: 0;
+    }
     .thumbs button {
       display: block;
-      width: 100%;
+      width: 140px;
+      flex: 0 0 auto;
       border: 0;
       padding: 6px;
       background: transparent;
@@ -140,10 +152,13 @@
     }
     .thumbs img {
       width: 100%;
-      height: 120px;
+      height: 90px;
       object-fit: cover;
       border-radius: 8px;
       border: 2px solid transparent;
+    }
+    .thumbs button:hover img {
+      border-color: #111;
     }
     .thumbs button.active img {
       border-color: #111;
@@ -162,29 +177,9 @@
       :root {
         --viewer-height: min(60vh, 480px);
       }
-      .thumbs {
-        display: flex;
-        align-items: flex-start;
-        gap: 8px;
-        overflow-x: auto;
-        overflow-y: hidden;
-        white-space: nowrap;
-        margin: 0 0 18px 0;
-      }
       .thumbs h2 {
         margin: 0 10px 0 6px;
         white-space: nowrap;
-      }
-      #thumbList {
-        display: flex;
-        gap: 8px;
-      }
-      .thumbs button {
-        width: 140px;
-        flex: 0 0 auto;
-      }
-      .thumbs img {
-        height: 90px;
       }
     }
     .readme {
@@ -269,7 +264,7 @@
 
 <div class="page">
   <h1 class="page-title">SCADPipeline</h1>
-<div class="build-date">January 31, 2026</div>
+<div class="build-date">February 01, 2026</div>
   <div class="viewer" id="viewer">
     <button class="nav-btn nav-left" id="prevBtn" aria-label="Previous image">◀</button>
     <div class="viewer-media" id="viewerMedia">
@@ -422,6 +417,9 @@ rsync -av \
 
 cp &quot;$PIPELINE_DIR/README.md&quot; &quot;./README_pipeline.md&quot;
 if [ -f &quot;./README_template.md&quot; ]; then
+  if [ -f &quot;./README.md&quot; ]; then
+    mv &quot;./README.md&quot; &quot;./README.md.orig&quot;
+  fi
   mv &quot;./README_template.md&quot; &quot;./README.md&quot;
 fi
 
